--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:mysql://3.133.159.20:3306/SuperMarketList
 spring.datasource.username=supermarketusers
 spring.datasource.password=EstaEsLaContraseniaNumero1234ParaDB
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=supermarketlistbot@gmail.com
+spring.mail.password=yxrbgobmcdcprhub
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
