Prettier Emails and Email Validation

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<!-- Common Validator (Email Validator) -->
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.7</version>
+		</dependency>
+
 		<!-- Auth0 jwt -->
 		<dependency>
 			<groupId>com.auth0</groupId>
