--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<version>3.18.3</version>
 		</dependency>
 
+		<!-- Image upload  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
