--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:mysql://3.133.159.20:3306/SuperMarketList
+spring.datasource.url=jdbc:mysql://192.168.100.25:3306/SuperMarketList
 spring.datasource.username=supermarketusers
 spring.datasource.password=EstaEsLaContraseniaNumero1234ParaDB
 spring.jpa.hibernate.ddl-auto=update
+
+spring.data.mongodb.uri=mongodb://root:mision31@192.168.100.25:27017
+spring.data.mongodb.database=supermarketlist
+spring.data.mongodb.auto-index-creation=true
+
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
